# HydraFlow-X

./: .gitignore  API_Overview.md  CMakeLists.txt  CMakeLists_universal.txt  CONTRIBUTING.md  Core_Engine_APIs.md  Dockerfile  Dockerfile.dev  LICENSE  PRODUCTION_GUIDE.md  README.md  Security_APIs.md  config.env.example  deploy.sh  docker-compose.dev.yml  docker-compose.yml  index.html  package.json  projectdetails.md  requirements.txt  simple_system_test.cpp  standalone_dashboard.py  static_dashboard.html  tailwind.config.js  test_all_systems.cpp  tsconfig.json
core-backend/: CMakeLists.txt  README.md  production_main.cpp
core-backend/config/: config_manager.cpp  config_manager.hpp  hydraflow.example.json
core-backend/exchanges/: CMakeLists.txt
core-backend/exchanges/include/: coinbase_exchange.hpp
core-backend/exchanges/src/: coinbase_exchange.cpp
core-backend/hfx-ai/: CMakeLists.txt  README.md
core-backend/hfx-ai/include/: api_integration_manager.hpp  autonomous_research_engine.hpp  backtesting_engine.hpp  llm_decision_system.hpp  real_time_data_aggregator.hpp  sentiment_engine.hpp  sentiment_execution_pipeline.hpp
core-backend/hfx-ai/src/: ai_strategy_generator.cpp  api_integration_manager.cpp  autonomous_research_engine.cpp  crypto_market_analyzer.cpp  data_feeds_manager.cpp  llm_decision_system.cpp  llm_decision_system_core.cpp  real_time_data_aggregator.cpp  research_agent.cpp  sentiment_engine.cpp  sentiment_execution_pipeline.cpp  sentiment_to_execution_pipeline.cpp  signal_processor.cpp
core-backend/hfx-api/: CMakeLists.txt
core-backend/hfx-api/include/: rest_api_server.hpp
core-backend/hfx-api/src/: rest_api_server.cpp
core-backend/hfx-core/: CMakeLists.txt
core-backend/hfx-core/include/: arch_optimizations.hpp  event_engine.hpp  lockfree_queue.hpp  memory_pool.hpp  state_snapshot.hpp  thread_utils.hpp  time_wheel.hpp
core-backend/hfx-log/: CMakeLists.txt
core-backend/hfx-net/: CMakeLists.txt
core-backend/hfx-ultra/: CMakeLists.txt
core-backend/security/: security_config.hpp
core-backend/src/: main.cpp
core-backend/trading-engine/: CMakeLists.txt
hfx-auth/: CMakeLists.txt
hfx-auth/include/: api_key_manager.hpp  auth_manager.hpp  jwt_manager.hpp  session_manager.hpp  user_manager.hpp
hfx-auth/src/: api_key_manager.cpp  auth_manager.cpp  jwt_manager.cpp  session_manager.cpp  user_manager.cpp
hfx-backtest/: CMakeLists.txt
hfx-backtest/include/: backtest_data.hpp  backtest_engine.hpp  trading_strategy.hpp
hfx-backtest/src/: backtest_data.cpp  backtest_engine.cpp  data_sources.cpp  trading_strategy.cpp
hfx-chain/: CMakeLists.txt
hfx-chain/include/: chain_manager.hpp  ethereum_client.hpp  solana_client.hpp
hfx-chain/src/: chain_manager.cpp  ethereum_client.cpp  solana_client.cpp
hfx-db/: CMakeLists.txt
hfx-db/include/: data_models.hpp  database_connection.hpp  database_manager.hpp  production_database_manager.hpp  repositories.hpp
hfx-db/src/: analytics_repository.cpp  clickhouse_connection.cpp  database_connection.cpp  database_manager.cpp  liquidity_pool_repository.cpp  market_data_repository.cpp  performance_metrics_repository.cpp  position_repository.cpp  postgresql_connection.cpp  production_database_manager.cpp  risk_metrics_repository.cpp  trade_repository.cpp
hfx-exchange/: CMakeLists.txt
hfx-exchange/include/: exchange_manager.hpp
hfx-exchange/src/: binance_exchange.cpp  exchange_manager.cpp  uniswap_exchange.cpp
hfx-hedge/: CMakeLists.txt
hfx-hedge/include/: hedge_engine.hpp
hfx-hedge/src/: hedge_engine.cpp
hfx-hft/: CMakeLists.txt
hfx-hft/include/: execution_engine.hpp  memecoin_integrations.hpp  mev_strategy.hpp  policy_engine.hpp  replay_harness.hpp  signal_compressor.hpp
hfx-hft/src/: consensus_engine.cpp  dex_integration.cpp  execution_engine.cpp  hft_main.cpp  impact_simulator.cpp  jito_mev_integration.cpp  market_simulator.cpp  memecoin_integrations.cpp  memecoin_sniping.cpp  mev_strategy.cpp  order_routing_engine.cpp  permit2_integration.cpp  policy_engine.cpp  replay_harness.cpp  signal_compressor.cpp  slo_monitor.cpp  wallet_integration.cpp
hfx-mempool/: CMakeLists.txt
hfx-mempool/include/: gas_estimator.hpp  intent_parser.hpp  mempool_monitor.hpp  mev_detector.hpp  transaction_filter.hpp
hfx-mempool/src/: mev_detector.cpp
hfx-mev/: CMakeLists.txt
hfx-mev/include/: mev_protection_engine.hpp
hfx-mev/src/: mev_protection_engine.cpp
hfx-mm/: CMakeLists.txt
hfx-mm/include/: correlation_tracker.hpp  gas_price_predictor.hpp  inclusion_probability_model.hpp  queue_risk_assessor.hpp  slippage_estimator.hpp  volatility_models.hpp
hfx-monitor/: CMakeLists.txt
hfx-monitor/include/: alert_manager.hpp  health_checker.hpp  metrics_collector.hpp  performance_monitor.hpp  prometheus_exporter.hpp
hfx-monitor/src/: alert_manager.cpp  health_checker.cpp  metrics_collector.cpp  performance_monitor.cpp  prometheus_exporter.cpp
hfx-risk/: CMakeLists.txt
hfx-risk/include/: comprehensive_risk_manager.hpp  risk_manager.hpp
hfx-risk/src/: comprehensive_risk_manager.cpp  risk_manager.cpp
hfx-security/: CMakeLists.txt
hfx-security/include/: api_security.hpp  ddos_protection.hpp  rate_limiter.hpp  security_middleware.hpp
hfx-security/src/: api_security.cpp  ddos_protection.cpp  rate_limiter.cpp  security_middleware.cpp
hfx-sentiment/: CMakeLists.txt
hfx-sentiment/include/: sentiment_analyzer.hpp  sentiment_data_sources.hpp
hfx-sentiment/src/: sentiment_analyzer.cpp  sentiment_data_sources.cpp
hfx-strat/: CMakeLists.txt
hfx-strat/include/: strategy_engine.hpp
hfx-strat/src/: strategy_engine.cpp
hfx-viz/: CMakeLists.txt
hfx-viz/include/: imgui_dashboard.hpp  telemetry_engine.hpp  terminal_dashboard.hpp  websocket_server.hpp
hfx-viz/src/: data_streamer.cpp  imgui_dashboard.cpp  performance_metrics.cpp  telemetry_engine.cpp  terminal_dashboard.cpp  websocket_server.cpp
tests/: CMakeLists.txt  README.md
tests/integration/: test_trading_flow.cpp
tests/performance/: test_basic_benchmarks.cpp  test_latency_benchmarks.cpp
tests/unit/: test_security_manager.cpp
(+142 files in other folders)
